
- custom feature variable for gpsSpeed changed name from 'gpsSpeed' to 'speed1'
- added custom feature variables for longitude, latitude, altitude on gps level, see documentation for details

2014-10-20
- new setting all_files_including_data_are_inside_job_dir makes it possible to run a job using data in the job folder instead of the data folder.

2014-10-02
- Changed output of the tool both technically and visually (contents of testreport.txt is now in html for instance)
- Added csv support for unannotated data  
- Added stepresponse feature.

2014-08-07
- Added Bessel's correction to all standard deviation calculations (also in custom features)
- Added new accelerometer feature: fundfreqcorr_x(and y and z), the correlation with a sine wave with the fundamental frequency. 

26 July 2014
- Behavior when encountering undefined labels when loading annotated data can be set in settings file (continue_when_encountering_undefined_label = false).
- Number of bins used by fft must now be defined in settings.properties (minimum_number_of_bins_used_by_fft = 512).
- Sample rate of accelerometer must now be defined in settings.properties (accelerometer_sample_frequency = 20).

14 July 2014
- Added line in settings.properties that defines whether to allow multiple rows in classification output csv file with the same device and timestamp.
- Format of classification output csv file changed (added columns, changed column names)
- Filters on misclassifications in visualisation
- Added DB classification schema
- Added user defined custom features and new setting custom_feature_extractor_file_path.

27 May 2014
- Added visualisation of features (scatter plots), which is copied to the job dir
- Substituted "correlations" feature for "correlation_xy", "correlation_xz" and "correlation_yz"
- Fixed bug: correlation features are now 0 instead of NaN in case of a zero standard deviation 

12 May 2014