@@ -1,4 +1,4 @@
-id,ts,class
+device_info_serial,date_time,class_id
 1,2010-06-29T23:51:58.000Z,7
 1,2010-06-29T23:57:03.000Z,7
 1,2010-06-29T23:46:56.000Z,2
