@@ -1,4 +1,4 @@
-id,ts,class
+device_info_serial,date_time,class_id
 355,2010-06-28T02:10:02.000Z,2
 355,2010-06-28T02:15:10.000Z,2
 355,2010-06-28T02:20:34.000Z,2
